refactor: 레코드 구조 클래스 변경에 따른 메소드 변경