@@ -6,6 +6,8 @@ import com.postype.sns.domain.post.model.Post;
 import com.postype.sns.domain.post.model.TimeLine;
 import com.postype.sns.domain.post.repository.TimeLineRepository;
 import java.util.List;
+import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
@@ -18,15 +20,15 @@ public class TimeLineService {
 
 	public void deliveryToTimeLine(Long postId, List<Long> toMemberIds){
 		List<TimeLine> timelines = toMemberIds.stream()
-			.map((memberId) -> TimeLine.builder().memberId(memberId).postId(postId).build())
-			.toList();
+				.map((memberId) -> TimeLine.builder().memberId(memberId).postId(postId).build())
+				.collect(Collectors.toList());
 
 		timeLineRepository.saveAll(timelines);
 	}
 
 	public PageCursor<TimeLine> getTimeLine(Long memberId, CursorRequest request){
 		List<TimeLine> timeLines = findAllByMemberId(memberId, request);
-		var nextKey = timeLines.stream()
+		Long nextKey = timeLines.stream()
 			.mapToLong(TimeLine::getId)
 			.min()
 			.orElse(CursorRequest.DEFAULT_KEY);
@@ -35,10 +37,10 @@ public class TimeLineService {
 	}
 	public List<TimeLine> findAllByMemberId(Long memberId, CursorRequest request){
 		if(request.hasKey()){
-			return timeLineRepository.findAllByLessThanIdAndMemberIdAndOrderByIdDesc(request.key(), memberId,
-				request.size());
+			return timeLineRepository.findAllByLessThanIdAndMemberIdAndOrderByIdDesc(request.getKey(), memberId,
+				request.getSize());
 		}
-		return timeLineRepository.findAllByMemberIdAndOrderByIdDesc(memberId, request.size());
+		return timeLineRepository.findAllByMemberIdAndOrderByIdDesc(memberId, request.getSize());
 	}
 
 
